<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UDrink IDrive</string>
    <string name="pro_todrive">PROFESSIONALS TO DRIVE YOUR CAR</string>

    <string name="map_release">AIzaSyAWCsdoDkgIYFfBMa6QmcnCGS1SvKezINQ</string>
    <string name="map_dev">AIzaSyAWCsdoDkgIYFfBMa6QmcnCGS1SvKezINQ</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehaovir</string>

    <string name="facebook_app_id">916694911703367</string>
    <string name="signin">SIGN IN</string>
    <string name="register">Register</string>
    <string name="forgot">FORGOT PASSWORD</string>
    <string name="createaccount">CREATE ACCOUNT</string>
    <string name="done">DONE</string>
    <string name="login">Sign in</string>
    <string name="fg_msg">To recover your password, please enter your email</string>
    <string name="fg_edt_email">Email</string>
    <string name="fg_btConfirm">CONFIRM</string>
    <string name="si_tvForgot">FORGOT PASSWORD?</string>
    <string name="si_edt_username">Email</string>
    <string name="si_edt_password">Password</string>
    <string name="rg_edt_firstname">Firstname</string>
    <string name="rg_edt_lastname">Lastname</string>
    <string name="rg_edt_gender">Gender</string>
    <string name="rg_edit_phone">Mobile No.</string>
    <string name="rg_edt_usernames">Email</string>
    <string name="rg_edt_passwords">Password</string>
    <string name="rg_edt_passwords2">Re-enter Password</string>
    <string name="rg_term">Accept</string>
    <string name="rg_term2">terms and condition</string>
    <string name="rg_term3">and the privacy policy.</string>
    <string name="h_avilDriver">0 DRIVERS NEARBY</string>
    <string name="h_estimateArrive">ETA : 0 min</string>
    <string name="h_tvPickup">Pick up</string>
    <string name="h_tvPickupAddress">Tap to select a pick-up point</string>
    <string name="h_tvDropoff">Drop off</string>
    <string name="h_tvDropoffAddress">Tap to select a drop-off point</string>
    <string name="h_tvTime">Time</string>
    <string name="h_tvPickupTime">Tap to select a pick-up time</string>
    <string name="h_estimateArrive2">"ETA : "</string>
    <string name="h_avaiDriver2">" DRIVERS NEARBY"</string>
    <string name="h_btnPickupNow">PICK-UP NOW</string>
    <string name="h_msg"><![CDATA[Set a date & time for pick-up]]></string>
    <string name="cp_tvChangePass">CHANGE PASSWORD</string>
    <string name="cp_current">Current</string>
    <string name="cp_new">New</string>
    <string name="cp_reenter">Re-enter</string>
    <string name="cp_confirm">CONFIRM</string>
    <string name="cp_cancel">CANCEL</string>
    <string name="cc_add">ADD</string>
    <string name="cc_tvYourCard">CHOOSE PAYMENT</string>
    <string name="cc_btDone">DONE</string>
    <string name="ep_firstname">First name</string>
    <string name="ep_lastname">Last name</string>
    <string name="ep_gender">Gender</string>
    <string name="ep_email">Email</string>
    <string name="ep_profile">Mobile</string>
    <string name="ep_password">Password</string>
    <string name="ep_account">ACCOUNT</string>
    <string name="d_lblDriver">You drive with</string>
    <string name="d_btCancel">ยกเลิกบริการ</string>
    <string name="d_btContact">ติดต่อคอลเซ็นเตอร์</string>
    <string name="d_lblNoDriver">พนักงานจะติดต่อท่านเมื่อถึงเวลานัด</string>
    <string name="d_lblWaitDriver">Your Driver Has Arrived</string>
    <string name="d_lblWaitTime">wait 0 min</string>
    <string name="d_lblWaitCost">charge 0 THB</string>
    <string name="d_msg">Your reservation will be cancelled</string>
    <string name="d_msg2">automatically after 1 hour waiting</string>
    <string name="d_wait">"wait "</string>
    <string name="d_charge">"charge "</string>
    <string name="d_min">" min"</string>
    <string name="e_rate">RATE YOUR DRIVER</string>
    <string name="e_tvDriverName">Driver Name</string>
    <string name="e_tvPriceFinal">ESTIMATED PRICE :</string>
    <string name="his_tvMode">RESERVATION HISTORY</string>
    <string name="his_tvDateTime">DATE/TIME</string>
    <string name="his_tvPickup">PICKUP/DROPOFF</string>
    <string name="his_tvFee">FEE</string>
    <string name="his_pickup"><![CDATA[<font color=\'#3498DB\'>Pickup   </font>]]></string>
    <string name="his_dropoff"><![CDATA[<font color=\'#3498DB\'>Dropoff </font>]]></string>
    <string name="pc_title">ESTIMATED FARE</string>
    <string name="pc_tvPayment">Choose your credit card</string>
    <string name="pc_edtPromocode">Promo Code</string>
    <string name="pc_btConfirm">CONFIRM</string>
    <string name="pc_btBack">BACK</string>
    <string name="pm_holder">Card holder\'s name</string>
    <string name="pm_mm">MM</string>
    <string name="pm_yy">YY</string>
    <string name="pm_cvv">CVV</string>
    <string name="pm_btAdd">ADD CREDIT/DEBIT CARD</string>
    <string name="pm_btCancel">CANCEL</string>
    <string name="pm_status">Your credit card number is valid</string>
    <string name="pm_status2">Your credit card number is invalid</string>
    <string name="pf_editAccount">VIEW ACCOUNT</string>
    <string name="pf_payment">PAYMENT</string>
    <string name="pf_reservhis">RESERVATION HISTORY</string>
    <string name="pf_reward">REWARDS</string>
    <string name="pf_about">ABOUT US</string>
    <string name="pf_logout">LOG OUT</string>
    <string name="r_distance">Distance</string>
    <string name="r_date">Date</string>
    <string name="r_time">Time</string>
    <string name="r_estimate">Estimated Fare</string>
    <string name="r_next">NEXT</string>
    <string name="r_addmore">ADD MORE DESTINATION</string>
    <string name="r_tvSortby">SORT BY USER</string>
    <string name="r_edtCar">Brand/Model</string>
    <string name="r_license">Car license</string>
    <string name="r_contactname">Contact Name *</string>
    <string name="r_contactnumber">Contact Number *</string>
    <string name="r_tvWait">Ask driver to wait</string>
    <string name="r_driver">Driver</string>
    <string name="r_btGoNext">NEXT</string>
    <string name="r_btBack">BACK</string>
    <string name="r_tvDriver">Any Gender</string>
    <string name="r_yourcar">Your Car</string>
    <string name="r_gear">Gear *</string>
    <string name="s_edtLocation">Search location</string>
    <string name="s_tvNearby">Nearby</string>
    <string name="s_tvFav">Favorites</string>
    <string name="s_tvRecent">Recent</string>
    <string name="s_btConfirm">CONFIRM</string>
    <string name="s_pickup">PICK UP</string>
    <string name="s_dropoff">DROP OFF</string>
    <string name="s_adddropoff">ADD DROP OFF</string>
    <string name="de_title">SERVICE COMPLAINTS</string>
    <string name="de_edt_evaluate">Other Complaints</string>
    <string name="de_btn_evaluate">DONE</string>
    <string name="au_msg">Thailand is ranked the world\'s 3rd highest for road accidents and drunk driving fatalities . U Drink I Drive company not only recognizes the continuous increase in numbers of road accidents caused by drunk driving but also the "value of saving lives" and safety precautions.</string>
    <string name="au_msg2">We are enthusiastic not only in lowering the numbers of road accidents, but our mission is to bring about changes to the lifestyle of Thai People.
This is the first time that customers can experience a new life style service catered to offer safety,convenience and personalized service by professional drivers trained by leading Limousine Express Group, along with high technology GPS and DVR camera appliances.
U Drink I Drive spearheads a new service business in Thailand to ensure customers a"safe journey" home .</string>
    <string name="au_msg3">U DRINK I DRIVE " The professional driver service "</string>
    <string name="alert_cp1">New password does not match with Re-enter password</string>
    <string name="alert_cp2">Please fill out all field</string>
    <string name="alert_cp3">Are you sure?</string>
    <string name="alert_cc1">Do you want to change your default credit card</string>
    <string name="alert_cc2">Proceed?</string>
    <string name="alert_d1">NEW BOOKING</string>
    <string name="alert_d2">CANCEL TRIP</string>
    <string name="alert_d3">You can cancel the trip 45 mins before the appointment time to make a new booking without any cost if you make a new booking within 1 day</string>
    <string name="alert_d4">You can cancel the trip 45 mins before the appointment time to make a new booking without any cost if you make a new booking within 1 day</string>
    <string name="alert_d5">Canceling within 5 minutes: free of charge\nCanceling 1 hr. In advance: 250 THB\nCanceling the service: 500 THB</string>
    <string name="alert_d6">Contact your driver?</string>
    <string name="alert_d7">The driver will be assigned to you soon</string>
    <string name="alert_d8">Your reservation has been cancelled</string>
    <string name="alert_ep1">Mobile No. must be at least 10 digits</string>
    <string name="alert_ev1">Thank you for using our service</string>
    <string name="alert_fp1">Please fill out field</string>
    <string name="alert_fp2">Wrong email format</string>
    <!--<string name="alert_h1">Reservation time must be more than 30 minutes from now ( เลยเที่ยงคืน นับเป็นวันถัดไป อย่าลืมเปลี่ยนวันที่ด้วยนะครับ )</string>-->
    <string name="alert_h1"> 1. เวลารับ เลยเที่ยงคืน ต้องเปลี่ยนวันที่ เป็นวันพรุ่งนี้\n2. กรุณาเลือก เวลารับ ล่วงหน้า 30 นาที</string>
    <string name="alert_pm1">Please fill out all field and make sure your credit card number is valid</string>
    <string name="alert_pm2">Expiration month must be less than 12</string>
    <string name="alert_pm3">Only Mastercard and Visa are accepted</string>
    <string name="alert_pm4">Card already added</string>
    <string name="alert_p1">During reservation, logging out is not allowed</string>
    <string name="alert_p2">All history and data will be delete. Are you sure?</string>
    <string name="alert_r1">Confirm Registration?</string>
    <string name="alert_r2"><![CDATA[You have to agree to our Terms & Condition!]]></string>
    <string name="alert_r3">Please fill out all field</string>
    <string name="alert_r4">Wrong email format</string>
    <string name="alert_r5">Password and re-enter password do not match!</string>
    <string name="alert_r6">Password must be between 4 - 16 characters</string>
    <string name="alert_r7">Wrong mobile number format</string>
    <string name="alert_r8">Please select your gender</string>
    <string name="alert_rv1">Please fill car, its gear, contact name and your contact number</string>
    <string name="alert_rv2">Wrong mobile number format</string>
    <string name="alert_si1">Please fill in correct format</string>
    <string name="alert_si2">Your need to update to the latest version</string>
    <string name="policy">https://www.udrinkidrive.co.th/udrink_api/public/policy-en.html</string>
    <string name="reward_rule">http://udrinkapi.doozyapp.com/public/loyalty_rule_EN.html</string>

</resources>
