<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="5dp"
            android:padding="7dp"
            android:src="@drawable/close" />

        <fonts.DBHelvethaicaX.MedTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/forgot"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="10dp">

        <fonts.DBHelvethaicaX.MedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:singleLine="true"
            android:text="@string/fg_msg"
            android:textColor="@color/white"
            android:textColorHint="@color/blue_curious"
            android:textSize="@dimen/font_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:gravity="center" />

        <fonts.DBHelvethaicaX.MedEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:alpha="0.8"
            android:background="@color/grey"
            android:hint="@string/fg_edt_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:padding="7dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/blue_curious"
            android:textSize="@dimen/font_medium" />

        <fonts.DBHelvethaicaX.MedCondButton
            android:id="@+id/btConfirm"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/fg_btConfirm"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large" />

    </LinearLayout>


</LinearLayout>