<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:gravity="center"
    android:orientation="vertical">

    <!--<ImageView-->
        <!--android:id="@+id/splashImageView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:scaleType="fitXY"-->
        <!--android:src="@drawable/bg_login"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:background="#000">

    <ImageView
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo_udrink"></ImageView>

    <fonts.DBHelvethaicaX.LiTextView
        android:id="@+id/tvSologan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/pro_todrive"
        android:textColor="@color/white"
        android:textSize="@dimen/font_small" />

    <LinearLayout
        android:id="@+id/lv_box_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <fonts.DBHelvethaicaX.MedCondButton
            android:id="@+id/btSignin"
            android:contentDescription="btSignin"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="@dimen/font_xlarge"
            android:background="@color/white"
            android:padding="5dp"
            android:layout_margin="7dp"
            android:textColor="@color/grey800"
            android:text="@string/login" />

        <fonts.DBHelvethaicaX.MedCondButton
            android:id="@+id/btRegister"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="@dimen/font_xlarge"
            android:background="@color/blue"
            android:padding="5dp"
            android:layout_margin="7dp"
            android:textColor="@color/white"
            android:text="@string/register" />

    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lv_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        android:background="#000">

        <ImageView
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:src="@drawable/logo_udrink">

        </ImageView>

        <fonts.DBHelvethaicaX.LiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/pro_todrive"
            android:textColor="@color/white"
            android:textSize="@dimen/font_small" />

    </LinearLayout>


</FrameLayout>