<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/black"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/llBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:padding="7dp"
            android:layout_centerVertical="true"
            android:src="@drawable/down" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true">

            <fonts.DBHelvethaicaX.MedCondTextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="U DRINK "
                android:textColor="@color/white"
                android:textSize="@dimen/font_xlarge" />

            <fonts.DBHelvethaicaX.MedCondTextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="I DRIVE"
                android:textColor="@color/blue"
                android:textSize="@dimen/font_xlarge" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reservationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:padding="5dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <fonts.DBHelvethaicaX.MedCondTextView
            android:id="@+id/tvChangePass"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/blue_curious"
            android:gravity="center"
            android:text="@string/cp_tvChangePass"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large" />

        <LinearLayout
            android:id="@+id/llCurrent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tvChangePass"
            android:background="@color/greyAlpha"
            android:orientation="horizontal">

            <fonts.DBHelvethaicaX.MedTextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
                android:text="@string/cp_current"
                android:textColor="@color/blue_curious"
                android:textSize="@dimen/font_medium" />

            <fonts.DBHelvethaicaX.MedEditText
                android:id="@+id/edtCurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="7dp"
                android:singleLine="true"
                android:lines="1"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="@dimen/font_medium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/llCurrent"
            android:background="@color/greyAlpha"
            android:orientation="horizontal">

            <fonts.DBHelvethaicaX.MedTextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
                android:text="@string/cp_new"
                android:textColor="@color/blue_curious"
                android:textSize="@dimen/font_medium" />

            <fonts.DBHelvethaicaX.MedEditText
                android:id="@+id/edtNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="7dp"
                android:singleLine="true"
                android:lines="1"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="@dimen/font_medium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llReNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/llNew"
            android:background="@color/greyAlpha"
            android:orientation="horizontal">

            <fonts.DBHelvethaicaX.MedTextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
                android:text="@string/cp_reenter"
                android:textColor="@color/blue_curious"
                android:textSize="@dimen/font_medium" />

            <fonts.DBHelvethaicaX.MedEditText
                android:id="@+id/edtReNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="7dp"
                android:singleLine="true"
                android:lines="1"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="@dimen/font_medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <fonts.DBHelvethaicaX.MedCondButton
                android:id="@+id/btConfirm"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/cp_confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/font_large" />

            <fonts.DBHelvethaicaX.MedCondButton
                android:id="@+id/btCancel"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/cp_cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/font_large" />
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>